--- a/assets/css/dh_homepage.css
+++ b/assets/css/dh_homepage.css
@@ -1658,4 +1658,10 @@ span.input-group-btn {
     height: 40em
   }
 }
+.m-0 {
+  margin : 0 !important;
+}
+.p-0 {
+  padding: 0 !important;
+}
 /* end custom */
